# WallGoCollision

./: .gitignore  .readthedocs.yml  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  README.rst  conanfile.py  conanfile.txt  config.ini  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: buildAndTest.yml  build_binaries.yml  build_sdist.yml  build_wheels.yml  main.yml  publish_pypi.yml  testpypi.yml  tests_fast.yml  wheels.yml
cmake/: Findmuparser.cmake  GenerateProjectVersion.cmake
docs/: Makefile  README.md  index.md  install.md  integration.md  make.bat  physics.md  quickstart.md  requirements.txt
docs/javascripts/: mathjax.js
docs/source/: conf.py  contact.md  index.md  install.md  integration.md  license.md  physics.md  quickstart.md  refs.bib
examples/: CMakeLists.txt  QCD.cpp  SM.cpp  SMQCD.cpp
examples/MatrixElements/: MatrixElements_QCD.txt  SM.json  SMQCD.json  test_u1_higgs_yukawa.json
old/: collisionOperator.cpp
old/tests/: CMakeLists.txt  test_integrand.cpp  test_main.cpp
old/tests/include/: TestModel_QCD.h
old/tests/testdata/: MatrixElements.txt
pybind/: CMakeLists.txt  test.py  test_pybind.py
pybind/src/: BindToPython.cpp
python/: CMakeLists.txt  pytest.ini  stubgen.py
python/example/: collision_python_example.py
python/package/: test_collision_package.py
python/package_standalone/: test_collision_package.py
python/packagedata/WallGoCollision/: __init__.py
python/src/: BindToPython.cpp
python/tests/: conftest.py  test_ModelParameters.py  test_collisionIntegration.py  test_integrand.py
python/tests/MatrixElements/: MatrixElements_QCD.json
src/: CMakeLists.txt  CollElem.cpp  Collision.cpp  CollisionIntegral.cpp  CollisionManager.cpp  CollisionTensor.cpp  CollisionTensorResult.cpp  FourVector.cpp  MatrixElement.cpp  MatrixElementParsing.cpp  ModelDefinitions.cpp  PhysicsModel.cpp  ResultContainers.cpp  Utils.cpp  WriteToHDF5.cpp  gslWrapper.cpp  hdf5Interface.cpp  kinematics.cpp  main.cpp  operators.cpp  operators.h
src/include/WallGo/: CollisionElement.h  CollisionIntegral.h  CollisionTensor.h  Common.h  EnvironmentMacros.h  FourVector.h  IntegrationOptions.h  MatrixElement.h  MatrixElementParsing.h  ModelChangeContext.h  ModelObserver.h  ModelParameters.h  ParticleSpecies.h  PhysicsModel.h  PolynomialBasis.h  ResultContainers.h  ThreeVector.h  Utils.h  WallGoCollision.h  gslWrapper.h  hdf5Interface.h
src/include/WallGoCollision/: CollElem.h  CollisionElement.h  CollisionIntegral.h  CollisionManager.h  CollisionTensor.h  CollisionTensorResult.h  Common.h  ConfigParser.h  EnvironmentMacros.h  FourVector.h  MatrixElement.h  MatrixElementParsing.h  ModelDefinitions.h  ModelObserver.h  ModelParameters.h  ParticleSpecies.h  PhysicsModel.h  PolynomialBasis.h  ResultContainers.h  ThreeVector.h  Utils.h  WallGoCollision.h  gslWrapper.h  hdf5Interface.h
src/include/collision/: CollElem.h  Collision.h  CollisionIntegral.h  CollisionManager.h  Common.h  ConfigParser.h  FourVector.h  MatrixElement.h  ParticleSpecies.h  PolynomialBasis.h  ThreeVector.h  constants.h  gslWrapper.h  hdf5Interface.h  kinematics.h  operators.h
testrun/MatrixElements/: matrixElements_top_top
tests/: CMakeLists.txt  test_integrand.cpp  test_integration.cpp  test_main.cpp
tests/include/: TestModel_QCD.h  testparams.h
