# Uses scikit-build-core and its conan plugin scikit-build-core-conan to invoke install dependencies with Conan, then invoke CMake normally.
# Makes the Collision module installable with pip:
# pip install . [-v]
# The -v is necessary to see what is going on under the hood (Conan, CMake messages).
# Note that build artifacts will go wherever pip decides to put them.

[build-system]
requires = ["scikit-build-core-conan>=0.3.1", "pybind11>=2.13.1", "mypy>=1.11.1"]
build-backend = "scikit_build_core_conan.build"

[project]
name = "WallGoCollision"
description = "Python bindings for WallGo Collision module"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
# get version from Github using setuptools_scm
dynamic = ["version"]
requires-python = ">=3.10"

[project.optional-dependencies]
tests = [
    "pytest>=7.2.2",
]

[tool.scikit-build]
minimum-version = "0.10"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/packagedata/WallGoCollision/_version.py", "python/packagedata/WallGoCollision/*.pyi"]
build.verbose = false
cmake.build-type = "Release"
# Run cmake before building wheel
wheel.cmake = true
# Include files from these dirs in the wheel (__init__.py etc)
wheel.packages = ["python/packagedata/WallGoCollision"]
wheel.exclude = ["__pycache__/*"]

[tool.setuptools_scm]
write_to = "python/packagedata/WallGoCollision/_version.py"

[tool.scikit-build.cmake.define]
# Disable compilation of CPP specific examples
BUILD_EXAMPLES = "OFF"

# Editable installs come with a bunch of issues, see https://scikit-build-core.readthedocs.io/en/latest/configuration.html#editable-installs
# In particular, pip tends to delete the build dir after installation, so we lose the Conan toolchain file etc.
# The docs recommend to preinstall dependencies when doing editable installs

[tool.scikit-build-core-conan]
build = "missing"
