[build-system]
requires = ["scikit-build-core-conan>=0.3.1", "pybind11>=2.13.1", "mypy>=1.11.1"]
build-backend = "scikit_build_core_conan.build"

[project]
name = "WallGoCollision"
description = "Python bindings for WallGo Collision module"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "GPL 3.0"}
# get version from Github using setuptools_scm
dynamic = ["version"]
requires-python = ">=3.10"

[project.optional-dependencies]
tests = [
    "pytest>=7.2.2",
]
docs = [
    "myst_parser",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-bibtex",
]

[tool.scikit-build]
minimum-version = "0.10"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
# Source distribution includes/excludes
sdist.include = [
    "python/packagedata/WallGoCollision/_version.py",
]
sdist.exclude = [
    ".gitattributes",
    ".gitignore",
    ".github",
    "docs",
    ".readthedocs.yml",
    "old"
]
#
build.verbose = false
cmake.build-type = "Release"
# Run cmake before building wheel
wheel.cmake = true
# Include files from these dirs in the wheel (__init__.py etc)
wheel.packages = ["python/packagedata/WallGoCollision"]
wheel.exclude = ["__pycache__/*"]

[tool.setuptools_scm]
write_to = "python/packagedata/WallGoCollision/_version.py"
# Increments version if commit is ahead of the last tag
version_scheme = "guess-next-dev"

[tool.scikit-build.cmake.define]
BUILD_PYTHON_MODULE = "ON"
USE_OMP = "ON"
# Disable compilation of CPP specific examples
BUILD_EXAMPLES = "OFF"
# Use env variable to mandate OpenMP during build. Used with cibuildwheel so that we don't accidentally build wheels without OMP
REQUIRE_OMP = {env="WALLGO_REQUIRE_OMP", default="OFF"}

[tool.scikit-build-core-conan]
build = "missing"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/python/tests"
# verbosity=1 corresponds to -v in pip
build-verbosity = 1
# Always require OMP with cibuildwheel. See cmake.defines above
environment = "WALLGO_REQUIRE_OMP=ON"
# Require at least macOS 11 since the default 10.9 is too low for some C++17 features
macos.environment = {WALLGO_USE_CONAN_OMP="1", MACOSX_DEPLOYMENT_TARGET="11.0"}
# Only do 64bit manylinux archs for now, some 32bit manylinux archs have issues obtaining CMake during build
linux.archs = ["auto64"]
macos.archs = ["auto"]
windows.archs = ["auto64"]
# skip musllinux because the gsl recipe from conan failed to compile on them
skip = "*musllinux_*"
